{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 40,
  "lineage": "796a037a-3b7d-d4d6-3971-8350e12171cf",
  "resources": [
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/peerprep-330408/global/networks/terraform-gke-network-lec7-network",
            "mtu": 0,
            "name": "terraform-gke-network-lec7-network",
            "project": "peerprep-330408",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/networks/terraform-gke-network-lec7-network"
          },
          "dependencies": [
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-28T17:52:30.097-07:00",
            "id": "projects/peerprep-330408/regions/asia-southeast1/routers/terraform-gke-network-lec7-router",
            "name": "terraform-gke-network-lec7-router",
            "network": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/networks/terraform-gke-network-lec7-network",
            "project": "peerprep-330408",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/regions/asia-southeast1/routers/terraform-gke-network-lec7-router"
          },
          "dependencies": [
            "random_string.suffix",
            "module.vpc_network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "vpc_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "peerprep-330408/asia-southeast1/terraform-gke-network-lec7-router/terraform-gke-network-lec7-nat",
            "min_ports_per_vm": 0,
            "name": "terraform-gke-network-lec7-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "peerprep-330408",
            "region": "asia-southeast1",
            "router": "terraform-gke-network-lec7-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/regions/asia-southeast1/subnetworks/terraform-gke-network-lec7-subnetwork-public",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_router.vpc_router",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-28T17:52:30.201-07:00",
            "gateway_address": "10.3.16.1",
            "id": "projects/peerprep-330408/regions/asia-southeast1/subnetworks/terraform-gke-network-lec7-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "terraform-gke-network-lec7-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/networks/terraform-gke-network-lec7-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "peerprep-330408",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/regions/asia-southeast1/subnetworks/terraform-gke-network-lec7-subnetwork-private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-10-28T17:52:30.486-07:00",
            "gateway_address": "10.3.0.1",
            "id": "projects/peerprep-330408/regions/asia-southeast1/subnetworks/terraform-gke-network-lec7-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_10_MIN",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "terraform-gke-network-lec7-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/networks/terraform-gke-network-lec7-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "peerprep-330408",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-cluster"
              },
              {
                "ip_cidr_range": "10.4.32.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/regions/asia-southeast1/subnetworks/terraform-gke-network-lec7-subnetwork-public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.16.1",
            "id": "projects/peerprep-330408/regions/asia-southeast1/subnetworks/terraform-gke-network-lec7-subnetwork-private",
            "ip_cidr_range": "10.3.16.0/20",
            "name": "terraform-gke-network-lec7-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/networks/terraform-gke-network-lec7-network",
            "private_ip_google_access": true,
            "project": "peerprep-330408",
            "region": "asia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/regions/asia-southeast1/subnetworks/terraform-gke-network-lec7-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.3.0.1",
            "id": "projects/peerprep-330408/regions/asia-southeast1/subnetworks/terraform-gke-network-lec7-subnetwork-public",
            "ip_cidr_range": "10.3.0.0/20",
            "name": "terraform-gke-network-lec7-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/networks/terraform-gke-network-lec7-network",
            "private_ip_google_access": true,
            "project": "peerprep-330408",
            "region": "asia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.4.0.0/20",
                "range_name": "public-cluster"
              },
              {
                "ip_cidr_range": "10.4.32.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/regions/asia-southeast1/subnetworks/terraform-gke-network-lec7-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-10-28T17:53:03.803-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/peerprep-330408/global/firewalls/terraform-gke-network-lec7-private-allow-ingress",
            "log_config": [],
            "name": "terraform-gke-network-lec7-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/networks/terraform-gke-network-lec7-network",
            "priority": 1000,
            "project": "peerprep-330408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/firewalls/terraform-gke-network-lec7-private-allow-ingress",
            "source_ranges": [
              "10.3.0.0/20",
              "10.3.16.0/20",
              "10.4.0.0/20",
              "10.4.16.0/20",
              "10.4.32.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_string.suffix",
            "module.vpc_network.google_compute_network.vpc",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.vpc_network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.vpc_network.module.network_firewall.data.google_compute_subnetwork.private_subnetwork",
            "module.vpc_network.module.network_firewall.data.google_compute_subnetwork.public_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_restricted_network_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-10-28T17:52:29.710-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/peerprep-330408/global/firewalls/terraform-gke-network-lec7-allow-restricted-inbound",
            "log_config": [],
            "name": "terraform-gke-network-lec7-allow-restricted-inbound",
            "network": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/networks/terraform-gke-network-lec7-network",
            "priority": 1000,
            "project": "peerprep-330408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/firewalls/terraform-gke-network-lec7-allow-restricted-inbound",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "private",
              "private-persistence"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "private-persistence"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "public_allow_all_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-10-28T17:52:30.252-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/peerprep-330408/global/firewalls/terraform-gke-network-lec7-public-allow-ingress",
            "log_config": [],
            "name": "terraform-gke-network-lec7-public-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/networks/terraform-gke-network-lec7-network",
            "priority": 1000,
            "project": "peerprep-330408",
            "self_link": "https://www.googleapis.com/compute/v1/projects/peerprep-330408/global/firewalls/terraform-gke-network-lec7-public-allow-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "public"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.google_compute_network.vpc",
            "random_string.suffix"
          ]
        }
      ]
    }
  ]
}